// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChangeOtherListModal > renders appropriate instructions when copy and lists 1`] = `
<div
  class="tw:p-4"
>
  <div
    class="tw:mb-3 tw:text-sm tw:text-[var(--color-text-secondary)]"
  >
    Choose an existing list or create a new one to copy items
  </div>
  <form
    autocomplete="off"
  >
    <button
      class="tw:text-sm tw:text-[var(--color-primary)] tw:font-medium tw:underline tw:mb-3"
      data-test-id="create-new-list-link"
      type="button"
    >
      Create new list
    </button>
    <div
      class="tw:mb-3"
    >
      <div
        class="tw:w-full tw:my-2"
      >
        <div
          class="tw:relative tw:border tw:rounded-[var(--radius-lg)] tw:bg-[var(--color-surface)] tw:transition-colors tw:border-[var(--color-border)]"
        >
          <label
            class="tw:absolute tw:-top-2 tw:left-3 tw:px-1 tw:bg-[var(--color-surface)] tw:text-xs tw:font-medium tw:text-[var(--color-text-secondary)]"
            for="existingList"
          >
            Existing list
          </label>
          <select
            class="tw:w-full tw:h-11 tw:px-4 tw:bg-transparent tw:border-0 tw:outline-none tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30 tw:appearance-none tw:bg-[image:url('data:image/svg+xml;utf8,<svg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22%236b7280%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22><polyline%20points=%226%209%2012%2015%2018%209%22></polyline></svg>')] tw:bg-no-repeat tw:bg-right tw:pr-10"
            id="existingList"
            name="existingList"
          >
            <option
              disabled=""
              value=""
            >
              Select Existing list
            </option>
            <option
              value="list-2"
            >
              Existing List
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="tw:grid tw:gap-2 tw:mt-3"
    >
      <button
        class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:focus-visible:outline-none tw:focus-visible:ring-2 tw:focus-visible:ring-[var(--color-primary)] tw:bg-[var(--color-success)] tw:text-white tw:hover:opacity-90 tw:active:opacity-80 tw:h-10 tw:px-4 tw:text-sm tw:rounded-[var(--radius-lg)] tw:w-full tw:cursor-pointer"
        type="submit"
      >
        Complete
      </button>
      <button
        class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:focus-visible:outline-none tw:focus-visible:ring-2 tw:focus-visible:ring-[var(--color-primary)] tw:text-[var(--color-text-secondary)] tw:hover:bg-[var(--color-surface-overlay)] tw:active:bg-[var(--color-surface-raised)] tw:h-10 tw:px-4 tw:text-sm tw:rounded-[var(--radius-lg)] tw:w-full tw:cursor-pointer"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`ChangeOtherListModal > renders appropriate instructions when move and lists 1`] = `
<div
  class="tw:p-4"
>
  <div
    class="tw:mb-3 tw:text-sm tw:text-[var(--color-text-secondary)]"
  >
    Choose an existing list or create a new one to move items
  </div>
  <form
    autocomplete="off"
  >
    <button
      class="tw:text-sm tw:text-[var(--color-primary)] tw:font-medium tw:underline tw:mb-3"
      data-test-id="create-new-list-link"
      type="button"
    >
      Create new list
    </button>
    <div
      class="tw:mb-3"
    >
      <div
        class="tw:w-full tw:my-2"
      >
        <div
          class="tw:relative tw:border tw:rounded-[var(--radius-lg)] tw:bg-[var(--color-surface)] tw:transition-colors tw:border-[var(--color-border)]"
        >
          <label
            class="tw:absolute tw:-top-2 tw:left-3 tw:px-1 tw:bg-[var(--color-surface)] tw:text-xs tw:font-medium tw:text-[var(--color-text-secondary)]"
            for="existingList"
          >
            Existing list
          </label>
          <select
            class="tw:w-full tw:h-11 tw:px-4 tw:bg-transparent tw:border-0 tw:outline-none tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30 tw:appearance-none tw:bg-[image:url('data:image/svg+xml;utf8,<svg%20xmlns=%22http://www.w3.org/2000/svg%22%20viewBox=%220%200%2024%2024%22%20fill=%22none%22%20stroke=%22%236b7280%22%20stroke-width=%222%22%20stroke-linecap=%22round%22%20stroke-linejoin=%22round%22><polyline%20points=%226%209%2012%2015%2018%209%22></polyline></svg>')] tw:bg-no-repeat tw:bg-right tw:pr-10"
            id="existingList"
            name="existingList"
          >
            <option
              disabled=""
              value=""
            >
              Select Existing list
            </option>
            <option
              value="list-2"
            >
              Existing List
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      class="tw:grid tw:gap-2 tw:mt-3"
    >
      <button
        class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:focus-visible:outline-none tw:focus-visible:ring-2 tw:focus-visible:ring-[var(--color-primary)] tw:bg-[var(--color-success)] tw:text-white tw:hover:opacity-90 tw:active:opacity-80 tw:h-10 tw:px-4 tw:text-sm tw:rounded-[var(--radius-lg)] tw:w-full tw:cursor-pointer"
        type="submit"
      >
        Complete
      </button>
      <button
        class="tw:font-medium tw:transition-colors tw:duration-200 tw:ease-in-out tw:min-h-[44px] tw:flex tw:items-center tw:justify-center tw:gap-2 tw:focus-visible:outline-none tw:focus-visible:ring-2 tw:focus-visible:ring-[var(--color-primary)] tw:text-[var(--color-text-secondary)] tw:hover:bg-[var(--color-surface-overlay)] tw:active:bg-[var(--color-surface-raised)] tw:h-10 tw:px-4 tw:text-sm tw:rounded-[var(--radius-lg)] tw:w-full tw:cursor-pointer"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`ChangeOtherListModal > renders appropriate instructions when no lists 1`] = `
<div
  class="tw:mb-3 tw:text-sm tw:text-[var(--color-text-secondary)]"
>
  You do not have any other lists with the same configuration. Please create a new list to take this action.
</div>
`;
